添加XxlJob做分布式定时扫描任务

--- a/lottery-interfaces/pom.xml
+++ b/lottery-interfaces/pom.xml
@@ -83,6 +83,18 @@
         </dependency>
         <!-- MapStruct end -->
 
+        <!-- xxl-job-core https://github.com/xuxueli/xxl-job/-->
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
         <!-- 业务包 -->
         <dependency>
             <groupId>cn.itedus.lottery</groupId>
