--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,13 @@
                 <artifactId>db-router-spring-boot-starter</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
+
+            <!-- xxl-job-core https://github.com/xuxueli/xxl-job/-->
+            <dependency>
+                <groupId>com.xuxueli</groupId>
+                <artifactId>xxl-job-core</artifactId>
+                <version>2.3.0</version>
+            </dependency>
         </dependencies>
 
     </dependencyManagement>
