--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,12 @@
                 <artifactId>xxl-job-core</artifactId>
                 <version>2.3.0</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>2.6.0</version>
+            </dependency>
         </dependencies>
 
     </dependencyManagement>
